[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["cargo", "derive"] }
peak_alloc = { version = "0.2.1" }
thiserror = "2.0.3"
regex = "1.11.1"
log = "0.4.22"
pretty_env_logger = "0.5.0"
directories = "5.0.1"
lazy_static = "1.5.0"
serde = { version = "1.0.215", features = ["alloc", "derive"] }
toml = { version = "0.8.19"}
sha2 = "0.10.8"
reqwest = { version = "0.12.9", features = ["blocking"] }
itertools = "0.13.0"
sysinfo = "0.32.1"
rayon = "1.10.0"
pathfinding = "4.12.0"
smol_str = "0.3.2"

[build-dependencies]
prettyplease = "0.2.25"
quote = "1.0.37"
regex = "1.11.1"
syn = "2.0.89"


